# benchmark

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  bench_settings.h
common_abi/: bench_abi.h  bench_utils.hpp  build_info.h.in  types.h
cpu_auto/: CMakeLists.txt  cpu_auto_api.cc  cpu_auto_runner.cc  cpu_auto_runner.h
cpu_auto/algos/: algorithm.h  algorithms.h
cpu_avx512/: CMakeLists.txt  algorithms_opt.cc  algorithms_opt.hpp  cpu_avx512_api.cc  cpu_avx512_runner.cc  cpu_avx512_runner.h
cpu_avx512/algos/: algorithm.h  algorithms.cc  algorithms.h  bitonic_sort.cc  blackscholes.cc  conv2d.cc  histogram.cc  matmul.cc  nbody.cc  prefix.cc  reduce.cc  spmv.cc  vecadd.cc
cpu_mt/: CMakeLists.txt  cpu_mt_api.cc  cpu_mt_runner.cc  cpu_mt_runner.h
cpu_ref/: CMakeLists.txt  cpu_ref_api.cc  cpu_ref_runner.cc  cpu_ref_runner.h
cpu_ref/algos/: algorithm.h  algorithms.cc  algorithms.h
cpu_scalar/algos/: algorithm.h  algorithms.cc  algorithms.h  bitonic_sort.cc  blackscholes.cc  conv2d.cc  histogram.cc  matmul.cc  nbody.cc  prefix.cc  reduce.cc  spmv.cc  vecadd.cc
docs/: code_review.md  completion_plan.md  project_overview.md
docs/project-structure/: README.md  algorithms.md  architecture.md  backends.md
hybrid/: CMakeLists.txt
hybrid/src/: hybrid_api.cc  hybrid_runner.cc  hybrid_runner.h
orchestrator/: CMakeLists.txt  orchestrator.cc
scripts/: plot_results.py  plot_thesis.py  run_bench.sh  run_single_case.py  run_validation_matrix.py  validate_results.py
vkbench/: CMakeLists.txt  README.md
vkbench/shaders/: blackscholes.comp  bsort.comp  conv2d.comp  hist.comp  matmul.comp  nbody.comp  reduce.comp  scan_add.comp  scan_block.comp  spmv.comp  vecadd.comp
vkbench/src/: main.cc  vk_buffer.cc  vk_buffer.hpp  vk_common.hpp  vk_context.cc  vk_context.hpp  vk_pipeline.cc  vk_pipeline.hpp
